# cad

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
analytics/: __init__.py  filters.py  hypothesis_search.py  targets.py
app/: streamlit_app.py
app/tabs/: __init__.py  case_studies.py  data_health.py  hypothesis_lab.py  overview.py  period.py  query_builder.py  targets_table.py  timing.py
codex/: config.toml
config/: case_templates.yaml  fields.yaml  target_catalog.yaml
data/: filtered_data_20250103_034327.csv
data_io/: freshness.py  load_intraday.py  store.py
docs/: ARCH.md  CASE.md  CONFIG.md  DATA.md  FEATURE.md  HYPOTHESIS.md  INDEX.md  MILESTONE_STATUS.md  PRD.md  TASKS.md  TEST.md
features/: build_prevday_features.py  reducers.py  validate_features.py
reports/templates/: case_study.md
scripts/: build_daily_features.py  ingest_daily.py
src/analytics/: ci.py  hypothesis_search.py  timing.py
src/app/: streamlit_app.py
src/app/tabs/: case_studies.py  data_health.py  overview.py
src/data_io/: __init__.py  load_intraday.py
src/features/: build_eod_features.py  build_intraday_features.py
src/reports/: case_study_pdf.py
tests/: conftest.py  test_ci.py  test_filters.py  test_hypothesis_search.py  test_pipeline_integration.py  test_reducers.py  test_targets.py  test_timing.py
